--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 .main-header {
   display: flex;
-  background-color: #4E3883;
+  flex-direction: column;
+  align-items: center;
+  background-color: #5B4373;
+
 }
