--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,11 @@
   background-color: #5B4373;
 
 }
+
+.img-avatar {
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+  margin: 1rem;
+  
+}
