--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,4 +12,9 @@
   height: 10rem;
   margin: 1rem;
   
+.intro-text {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 4rem;
+    color: #FFDDCC;
+    margin: 1rem;
 }
