--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,13 +27,19 @@
 }
 
 .nav-link {
-    border-radius: 0.5rem;
-    background-color: #C091EF;
-    color: #5B4373;
-    padding: 0.5rem;
-    margin: 1rem;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.25rem;
-  }
+  border-radius: 0.5rem;
+  background-color: #C091EF;
+  color: #5B4373;
+  padding: 0.5rem;
+  margin: 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25rem;
+}
+
+footer {
+  background-color: #5B4373;
+  display: flex;
+  justify-content: center;
+}
