--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,12 @@
 footer {
   background-color: #5B4373;
   display: flex;
-  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  height: 5rem;
+  width: 100%;
 }
 
 .footer-text {
-	color:#C091EF;
-	padding: 5rem;
-  }
+  color:#C091EF;
+}
