--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,12 @@ body {
   min-height: 100%;
 }
 
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+  }
+
 footer {
   background-color: #5B4373;
   display: flex;
