--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,10 +44,16 @@ body {
 }
 
 main {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+  
+#projects {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
 footer {
   background-color: #5B4373;
