--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,8 @@ main {
 footer {
   background-color: #5B4373;
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   bottom: 0;
   height: 5rem;
