--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,14 @@ main {
   padding: 1rem;
 }
 
+#about-me {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem;
+}
+
 footer {
   background-color: #5B4373;
   display: flex;
