--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,13 @@ main {
   
 .project-card {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-card header {
+  font-weight: bold;
 }
 
 #about-me {
