add #contact-me to #about-me style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,8 @@ main {
   font-weight: bold;
 }
 
-#about-me {
+#about-me,
+#contact-me {
   display: flex;
   flex-direction: column;
   align-items: center;
