--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,15 @@ main {
   margin: 1rem;
 }
 
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h2 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 2.5rem;
+}
+
 footer {
   background-color: #5B4373;
   display: flex;
