--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  padding-bottom: 5rem;
 }
   
 #projects {
