--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,8 @@ main {
   
 #projects {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
